# git-workspace

./: .gitignore  README.md  pyproject.toml  workspace-config.json
git_workspace/: __init__.py  cli.py  workspace-config.schema.json
