[tool.poetry]
name = "git-workspace"
version = "0.1.0"
description = "A CLI tool for workspace management"
authors = ["Erik Jensen <erik@appulent.co.uk>"]
readme = "README.md"
packages = [{include = "git_workspace"}]
include = [
    "git_workspace/*.json"
]

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
jsonschema = "^3.2.0"
importlib-resources = {version = "^5.0.0", markers = "python_version < '3.9'"}

[tool.poetry.group.dev.dependencies]
pytest = "^8.3"

[tool.poetry.scripts]
git-workspace = "git_workspace.cli:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"